--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,5 +1,5 @@
 # spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABASE_SERVICE_PORT}/my_data
-spring.datasource.url=jdbc:postgresql://postgresql:5432/my_data
+spring.datasource.url=jdbc:postgresql://localhost:5432/my_data
 # spring.datasource.username=${DB_USERNAME}
 # spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username=admin
