--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,11 +1,16 @@
 # spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABASE_SERVICE_PORT}/my_data
-spring.datasource.url=jdbc:postgresql://localhost:5432/my_data
+# spring.datasource.url=jdbc:postgresql://localhost:5432/my_data
 # spring.datasource.username=${DB_USERNAME}
 # spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:h2:mem:fruits;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # To avoid CLOB related error...
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
