--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,14 @@
       <artifactId>micrometer-registry-prometheus</artifactId>
       <version>1.1.3</version>
     </dependency>
+    <dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		  </dependency>
+    <dependency>
+     <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <!-- Used only to replace ${db.name} in index.html with the corresponding Database name -->
