--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABAS
 # spring.datasource.url=jdbc:postgresql://postgresql:${MY_DATABASE_SERVICE_PORT}/my_data
 # spring.datasource.username=${DB_USERNAME}
 # spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 
